Fixed alignment for routing map on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -341,6 +341,10 @@ p {
     margin-left: 2rem;
   }
 
+  .margin-left-map-mobile {
+    margin-left: 2.7rem;
+  }
+
   .margin-left-offset-1rem-mobile {
     margin-left: 1rem;
   }
